# django-drf-blueprint

./: .env.dist  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
core/: schema_urls.py  urls.py  wsgi.py
core/settings/: base.py  local.py  production.py
